<resources>
    <string name="app_name">vokamart</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="belum_punya_akun_daftar_di_sini">Belum punya akun? Daftar di Sini</string>
    <string name="register">REGISTER</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sudah_punya_akun_login_disini">Sudah punya akun? Login disini</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="NamaProduk">Nama Produk</string>
    <string name="Harga">Harga</string>
    <string name="Stok">Stok</string>
    <string name="Berat">Berat</string>
    <string name="kategori">Kategori</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="variasi">Variasi</string>
    <string name="tambah">Tambah</string>
    <string name="l_produk">List Produk</string>
    <string name="filter">Filter</string>
    <string name="menu">Menu</string>
    <string name="plus">p</string>
    <string name="pencarian">Pencarian</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="produk_">Produk</string>
    <string name="pesanan">Pesanan</string>
    <string name="profil">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>