<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/LinearAtas"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:fontFamily="@font/lexendbold"
        android:textColor="@color/RedPrimary"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/LinearAtas"
        />
    <LinearLayout
        android:id="@+id/linear_login_required"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:layout_marginTop="100dp"
        android:layout_below="@id/textLogin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/GreyText"
            android:fontFamily="@font/lexendregular"/>

        <EditText
            android:id="@+id/edit_email"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/search_border"
            android:height="45dp"
            android:hint="   example@gmail.com"
            android:fontFamily="@font/lexendregular"
            android:textSize="15dp"
            android:gravity="left|center_vertical"
            android:paddingStart="8dp"/>

        <TextView
            android:id="@+id/RegisterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textSize="20sp"
            android:textColor="@color/GreyText"
            android:fontFamily="@font/lexendregular"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/Edit_Password"
            android:inputType="textVisiblePassword"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/search_border"
            android:height="45dp"
            android:hint="   Password"
            android:fontFamily="@font/lexendregular"
            android:textSize="15dp"
            android:gravity="left|center_vertical"
            android:paddingStart="8dp"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_login_required"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:text="Lupa Password"
        android:textSize="15sp"
        android:textColor="@color/GreyText"
        android:fontFamily="@font/lexendregular"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/text_disini_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_login_required"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/belum_punya_akun_daftar_di_sini"
        android:textColor="@color/GreyText"
        android:textSize="12sp"
        android:fontFamily="@font/lexendregular"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_disini_login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/button_primary"
        android:text="Login"
        android:fontFamily="@font/lexendsemibold"
        android:textSize="20sp"/>

</RelativeLayout>